--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>نظام الري الذكي</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -19,7 +20,7 @@
 
     .container {
       width: 90%;
-      max-width: 400px;
+      max-width: 450px;
       background-color: white;
       padding: 30px;
       border-radius: 15px;
@@ -49,6 +50,7 @@
       color: white;
       font-size: 16px;
       cursor: pointer;
+      margin-top: 10px;
     }
 
     .status {
@@ -65,6 +67,10 @@
 
     #dashboard {
       display: none;
+    }
+
+    .logout-btn {
+      background-color: #d63031;
     }
   </style>
 </head>
@@ -89,12 +95,19 @@
       حالة المضخة: <span id="pumpStatus" style="font-weight:bold;">--</span><br><br>
       <button onclick="togglePump()">تبديل حالة المضخة</button>
     </div>
+    <button class="logout-btn" onclick="logout()">تسجيل الخروج</button>
   </div>
 
   <script>
-    const users = {
-      user1: { password: 'pass1', deviceIP: 'http://192.168.1.100' },
-      user2: { password: 'pass2', deviceIP: 'http://192.168.1.101' }
+    const encodedUsers = {
+      user1: {
+        passHash: btoa('pass1'),
+        deviceIP: 'http://192.168.1.100'
+      },
+      user2: {
+        passHash: btoa('pass2'),
+        deviceIP: 'http://192.168.1.101'
+      }
     };
 
     let pumpOn = false;
@@ -104,11 +117,11 @@
       event.preventDefault();
       const username = document.getElementById('username').value.trim();
       const password = document.getElementById('password').value.trim();
+      const encodedPass = btoa(password);
 
-      if (users[username] && users[username].password === password) {
+      if (encodedUsers[username] && encodedUsers[username].passHash === encodedPass) {
         localStorage.setItem('loggedInUser', username);
-        deviceIP = users[username].deviceIP;
-        localStorage.setItem('deviceIP', deviceIP);
+        localStorage.setItem('deviceIP', encodedUsers[username].deviceIP);
         showDashboard();
       } else {
         document.getElementById('loginError').style.display = 'block';
@@ -129,6 +142,10 @@
           .then(data => {
             document.getElementById('temp').innerText = data.temp;
             document.getElementById('humidity').innerText = data.humidity;
+          })
+          .catch(() => {
+            document.getElementById('temp').innerText = '--';
+            document.getElementById('humidity').innerText = '--';
           });
 
         fetch(${deviceIP}/pump/status)
@@ -150,6 +167,11 @@
       const status = document.getElementById('pumpStatus');
       status.innerText = pumpOn ? 'تشغيل' : 'إيقاف';
       status.style.color = pumpOn ? '#00b894' : '#d63031';
+    }
+
+    function logout() {
+      localStorage.clear();
+      location.reload();
     }
 
     window.onload = () => {
