--- a/index.html
+++ b/index.html
@@ -1,183 +1,341 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>نظام الري الذكي</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>Smart Planting - لوحة تحكم الري الذكي</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      background: linear-gradient(to bottom right, #e8f5e9, #d0f0fd);
-      margin: 0;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      flex-direction: column;
+    * {
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    .container {
-      width: 90%;
-      max-width: 450px;
-      background-color: white;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      text-align: center;
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
       direction: rtl;
     }
 
+    .container {
+      background-color: #1e1e2f;
+      padding: 30px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 450px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+      position: relative;
+    }
+
     h2 {
-      margin-bottom: 20px;
+      text-align: center;
+      margin-bottom: 25px;
+    }
+
+    /* اسم المشروع فوق */
+    .project-title {
+      position: absolute;
+      top: 12px;
+      left: 20px;
+      font-weight: 700;
+      font-size: 1.1em;
+      color: #00c6ff;
+      user-select: none;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      margin-top: 15px;
     }
 
     input {
-      width: 90%;
+      width: 100%;
       padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      font-size: 16px;
+      border-radius: 6px;
+      border: none;
+      outline: none;
+      margin-bottom: 10px;
+      background-color: #2e2e44;
+      color: white;
     }
 
     button {
-      padding: 10px 20px;
-      background-color: #00b894;
+      width: 100%;
+      padding: 12px;
+      background: #00c6ff;
+      background: linear-gradient(to right, #0072ff, #00c6ff);
       border: none;
-      border-radius: 10px;
+      border-radius: 6px;
       color: white;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    .status {
-      margin: 20px 0;
-      font-size: 18px;
-    }
-
-    .alert {
       font-weight: bold;
-      font-size: 16px;
+      cursor: pointer;
       margin-top: 15px;
-      color: #d63031;
+      transition: 0.3s ease;
+    }
+
+    button:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0 10px #00c6ff;
     }
 
     #dashboard {
       display: none;
     }
 
-    .logout-btn {
-      background-color: #d63031;
+    .sensor-box,
+    .control-box {
+      background-color: #2e2e44;
+      border-radius: 10px;
+      padding: 15px;
+      margin-top: 20px;
+    }
+
+    .status {
+      font-weight: bold;
+      font-size: 1.2em;
+      color: #00ffae;
+    }
+
+    .logout {
+      background: #ff4e50;
+      background: linear-gradient(to right, #f85032, #e73827);
+    }
+
+    .sensor-label {
+      color: #aaa;
+    }
+
+    /* زر اللغة */
+    .lang-switch {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      background-color: #005bbb; /* أزرق داكن */
+      color: white;
+      border: none;
+      font-weight: 700;
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      width: 38px;
+      height: 38px;
+      font-size: 1em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background-color 0.3s ease;
+      box-shadow: 0 0 8px rgba(0, 91, 187, 0.7);
+      user-select: none;
+    }
+
+    .lang-switch:hover {
+      background-color: #0072ff; /* أزرق أفتح */
+      box-shadow: 0 0 12px rgba(0, 114, 255, 0.9);
+    }
+
+    @media screen and (max-width: 500px) {
+      .container {
+        padding: 20px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container" id="login">
-    <h2>تسجيل الدخول</h2>
-    <form onsubmit="login(event)">
-      <input type="text" id="username" placeholder="اسم المستخدم" required><br>
-      <input type="password" id="password" placeholder="كلمة المرور" required><br>
-      <button type="submit">دخول</button>
-    </form>
-    <div class="alert" id="loginError" style="display:none;">خطأ في اسم المستخدم أو كلمة المرور</div>
-  </div>
+  <div class="container">
+    <div class="project-title" id="projectTitle">Smart Planting</div>
 
-  <div class="container" id="dashboard">
-    <h2>مرحبًا <span id="usernameDisplay"></span></h2>
-    <div class="status">
-      درجة الحرارة: <span id="temp">--</span> °C<br>
-      رطوبة التربة: <span id="humidity">--</span> %
+    <button class="lang-switch" id="langSwitch" onclick="toggleLang()">ع</button>
+
+    <!-- تسجيل الدخول -->
+    <div id="login">
+      <h2 id="loginTitle">تسجيل الدخول</h2>
+      <form onsubmit="return login(event)">
+        <label id="labelUsername">اسم المستخدم</label>
+        <input type="text" id="username" required />
+
+        <label id="labelPassword">كلمة المرور</label>
+        <input type="password" id="password" required />
+
+        <button type="submit" id="loginBtn">دخول</button>
+      </form>
     </div>
-    <div class="status">
-      حالة المضخة: <span id="pumpStatus" style="font-weight:bold;">--</span><br><br>
-      <button onclick="togglePump()">تبديل حالة المضخة</button>
+
+    <!-- لوحة التحكم -->
+    <div id="dashboard">
+      <h2 id="dashboardTitle">لوحة تحكم الري الذكي</h2>
+      <p>
+        <span id="welcomeText">مرحبًا،</span>
+        <span id="usernameDisplay"></span>
+      </p>
+
+      <div class="sensor-box">
+        <h3 id="sensorReadingsTitle">قراءات الحساسات</h3>
+        <p>
+          <span class="sensor-label" id="tempLabel">درجة الحرارة:</span>
+          <span id="temp" class="status">--</span> °C
+        </p>
+        <p>
+          <span class="sensor-label" id="humidityLabel">الرطوبة:</span>
+          <span id="humidity" class="status">--</span> %
+        </p>
+      </div>
+
+      <div class="control-box">
+        <h3 id="pumpControlTitle">التحكم في المضخة</h3>
+        <p>
+          <span id="pumpStatusLabel">الحالة الحالية:</span>
+          <span id="pumpStatus" class="status">مطفأة</span>
+        </p>
+        <button onclick="togglePump()" id="togglePumpBtn">تشغيل / إيقاف</button>
+      </div>
+
+      <button class="logout" onclick="logout()" id="logoutBtn">تسجيل الخروج</button>
     </div>
-    <button class="logout-btn" onclick="logout()">تسجيل الخروج</button>
   </div>
 
   <script>
-    const encodedUsers = {
-      user1: {
-        passHash: btoa('pass1'),
-        deviceIP: 'http://192.168.1.100'
-      },
-      user2: {
-        passHash: btoa('pass2'),
-        deviceIP: 'http://192.168.1.101'
-      }
+    const users = {
+      user1: 'pass1',
+      user2: 'pass2',
     };
 
     let pumpOn = false;
-    let deviceIP = '';
+    let currentLang = 'ar';
+
+    // نصوص بالعربية والإنجليزية
+    const texts = {
+      ar: {
+        projectName: 'Smart Planting',
+        loginTitle: 'تسجيل الدخول',
+        labelUsername: 'اسم المستخدم',
+        labelPassword: 'كلمة المرور',
+        loginBtn: 'دخول',
+        loginError: '❌ اسم المستخدم أو كلمة المرور غير صحيحة',
+        dashboardTitle: 'لوحة تحكم الري الذكي',
+        welcomeText: 'مرحبًا،',
+        sensorReadingsTitle: 'قراءات الحساسات',
+        tempLabel: 'درجة الحرارة:',
+        humidityLabel: 'الرطوبة:',
+        pumpControlTitle: 'التحكم في المضخة',
+        pumpStatusLabel: 'الحالة الحالية:',
+        pumpOn: 'شغالة',
+        pumpOff: 'مطفأة',
+        togglePumpBtn: 'تشغيل / إيقاف',
+        logoutBtn: 'تسجيل الخروج',
+        langButton: 'ع',
+      },
+      en: {
+        projectName: 'Smart Planting',
+        loginTitle: 'Login',
+        labelUsername: 'Username',
+        labelPassword: 'Password',
+        loginBtn: 'Login',
+        loginError: '❌ Incorrect username or password',
+        dashboardTitle: 'Smart Irrigation Dashboard',
+        welcomeText: 'Welcome,',
+        sensorReadingsTitle: 'Sensor Readings',
+        tempLabel: 'Temperature:',
+        humidityLabel: 'Humidity:',
+        pumpControlTitle: 'Pump Control',
+        pumpStatusLabel: 'Current status:',
+        pumpOn: 'On',
+        pumpOff: 'Off',
+        togglePumpBtn: 'Toggle Pump',
+        logoutBtn: 'Logout',
+        langButton: 'EN',
+      },
+    };
+
+    function setLanguage(lang) {
+      currentLang = lang;
+      document.documentElement.lang = lang;
+      document.body.dir = lang === 'ar' ? 'rtl' : 'ltr';
+
+      // تحديث النصوص
+      document.getElementById('projectTitle').innerText = texts[lang].projectName;
+      document.getElementById('loginTitle').innerText = texts[lang].loginTitle;
+      document.getElementById('labelUsername').innerText = texts[lang].labelUsername;
+      document.getElementById('labelPassword').innerText = texts[lang].labelPassword;
+      document.getElementById('loginBtn').innerText = texts[lang].loginBtn;
+      document.getElementById('dashboardTitle').innerText = texts[lang].dashboardTitle;
+      document.getElementById('welcomeText').innerText = texts[lang].welcomeText;
+      document.getElementById('sensorReadingsTitle').innerText = texts[lang].sensorReadingsTitle;
+      document.getElementById('tempLabel').innerText = texts[lang].tempLabel;
+      document.getElementById('humidityLabel').innerText = texts[lang].humidityLabel;
+      document.getElementById('pumpControlTitle').innerText = texts[lang].pumpControlTitle;
+      document.getElementById('pumpStatusLabel').innerText = texts[lang].pumpStatusLabel;
+      document.getElementById('pumpStatus').innerText = pumpOn ? texts[lang].pumpOn : texts[lang].pumpOff;
+      document.getElementById('togglePumpBtn').innerText = texts[lang].togglePumpBtn;
+      document.getElementById('logoutBtn').innerText = texts[lang].logoutBtn;
+      document.getElementById('langSwitch').innerText = texts[lang].langButton;
+    }
+
+    function toggleLang() {
+      if (currentLang === 'ar') {
+        setLanguage('en');
+      } else {
+        setLanguage('ar');
+      }
+    }
 
     function login(event) {
       event.preventDefault();
       const username = document.getElementById('username').value.trim();
       const password = document.getElementById('password').value.trim();
-      const encodedPass = btoa(password);
 
-      if (encodedUsers[username] && encodedUsers[username].passHash === encodedPass) {
+      if (users[username] === password) {
         localStorage.setItem('loggedInUser', username);
-        localStorage.setItem('deviceIP', encodedUsers[username].deviceIP);
         showDashboard();
       } else {
-        document.getElementById('loginError').style.display = 'block';
+        alert(texts[currentLang].loginError);
       }
     }
 
     function showDashboard() {
       const user = localStorage.getItem('loggedInUser');
-      deviceIP = localStorage.getItem('deviceIP');
-
-      if (user && deviceIP) {
+      if (user) {
         document.getElementById('login').style.display = 'none';
         document.getElementById('dashboard').style.display = 'block';
         document.getElementById('usernameDisplay').innerText = user;
 
-        fetch(${deviceIP}/sensors)
-          .then(res => res.json())
-          .then(data => {
-            document.getElementById('temp').innerText = data.temp;
-            document.getElementById('humidity').innerText = data.humidity;
-          })
-          .catch(() => {
-            document.getElementById('temp').innerText = '--';
-            document.getElementById('humidity').innerText = '--';
-          });
-
-        fetch(${deviceIP}/pump/status)
-          .then(res => res.text())
-          .then(status => {
-            pumpOn = status === 'on';
-            updatePumpStatusText();
-          });
+        // بيانات مؤقتة للعرض - اربطها بقراءة من ESP32 لاحقًا
+        document.getElementById('temp').innerText = '27.5';
+        document.getElementById('humidity').innerText = '52';
+        document.getElementById('pumpStatus').innerText = pumpOn ? texts[currentLang].pumpOn : texts[currentLang].pumpOff;
+        document.getElementById('pumpStatus').style.color = pumpOn ? '#00ffae' : '#ff4e50';
+      } else {
+        document.getElementById('login').style.display = 'block';
+        document.getElementById('dashboard').style.display = 'none';
       }
     }
 
     function togglePump() {
       pumpOn = !pumpOn;
-      updatePumpStatusText();
-      fetch(${deviceIP}/pump?status=${pumpOn ? 'on' : 'off'});
-    }
+      document.getElementById('pumpStatus').innerText = pumpOn ? texts[currentLang].pumpOn : texts[currentLang].pumpOff;
+      document.getElementById('pumpStatus').style.color = pumpOn ? '#00ffae' : '#ff4e50';
 
-    function updatePumpStatusText() {
-      const status = document.getElementById('pumpStatus');
-      status.innerText = pumpOn ? 'تشغيل' : 'إيقاف';
-      status.style.color = pumpOn ? '#00b894' : '#d63031';
+      // هنا تقدر ترسل أمر للـ ESP32 باستخدام fetch()
+      // fetch(http://esp32.local/pump?status=${pumpOn ? 'on' : 'off'});
     }
 
     function logout() {
-      localStorage.clear();
-      location.reload();
+      localStorage.removeItem('loggedInUser');
+      // بدل location.reload() نعرض شاشة تسجيل الدخول مباشرة
+      document.getElementById('dashboard').style.display = 'none';
+      document.getElementById('login').style.display = 'block';
+      document.getElementById('username').value = '';
+      document.getElementById('password').value = '';
     }
 
-    window.onload = () => {
-      if (localStorage.getItem('loggedInUser') && localStorage.getItem('deviceIP')) {
-        showDashboard();
-      }
+    window.onload = function () {
+      setLanguage('ar'); // البداية بالعربية
+      showDashboard();
     };
   </script>
 </body>
